@startuml
' Entity Classes (Passive, with properties and getters/setters)
class Language {
    - id: int
    - name: string
    - code: string

    + __construct(id: int, name: string, code: string)
    + getId(): int
    + getName(): string
    + getCode(): string
    + setName(name: string): void
    + setCode(code: string): void
}

class Topic {
    - id: int
    - title: string
    - language_id: int
    - description: string

    + __construct(id: int, title: string, language_id: int, description: string)
    + getId(): int
    + getTitle(): string
    + getLanguageId(): int
    + getDescription(): string
    + setTitle(title: string): void
    + setDescription(description: string): void
}

class Lesson {
    - id: int
    - title: string
    - content: string
    - topic_id: int
    - difficulty: string

    + __construct(id: int, title: string, content: string, topic_id: int, difficulty: string)
    + getId(): int
    + getTitle(): string
    + getContent(): string
    + getTopicId(): int
    + getDifficulty(): string
    + setTitle(title: string): void
    + setContent(content: string): void
    + setDifficulty(difficulty: string): void
}

class Dictionary {
    - id: int
    - word: string
    - translation: string
    - language_id: int
    - pronunciation: string
    - example: string

    + __construct(id: int, word: string, translation: string, language_id: int, pronunciation: string, example: string)
    + getId(): int
    + getWord(): string
    + getTranslation(): string
    + getLanguageId(): int
    + getPronunciation(): string
    + getExample(): string
    + setWord(word: string): void
    + setTranslation(translation: string): void
    + setPronunciation(pronunciation: string): void
    + setExample(example: string): void
}

' Repository Classes (Handle database operations)
class LanguageRepository {
    - conn: mysqli

    + __construct(conn: mysqli)
    + getAll(): array<Language>
    + getById(id: int): Language|null
    + create(language: Language): bool
    + update(language: Language): bool
    + delete(id: int): bool
}

class TopicRepository {
    - conn: mysqli

    + __construct(conn: mysqli)
    + getAll(): array<Topic>
    + getById(id: int): Topic|null
    + getByLanguage(language_id: int): array<Topic>
    + create(topic: Topic): bool
    + update(topic: Topic): bool
    + delete(id: int): bool
}

class LessonRepository {
    - conn: mysqli

    + __construct(conn: mysqli)
    + getAll(): array<Lesson>
    + getById(id: int): Lesson|null
    + getByTopic(topic_id: int): array<Lesson>
    + create(lesson: Lesson): bool
    + update(lesson: Lesson): bool
    + delete(id: int): bool
    + getProgress(lesson_id: int, user_id: int): array
    + updateProgress(lesson_id: int, user_id: int, completed: bool): bool
}

class DictionaryRepository {
    - conn: mysqli

    + __construct(conn: mysqli)
    + getAll(): array<Dictionary>
    + getById(id: int): Dictionary|null
    + getByLanguage(language_id: int): array<Dictionary>
    + search(keyword: string, language_id: int): array<Dictionary>
    + create(dictionary: Dictionary): bool
    + update(dictionary: Dictionary): bool
    + delete(id: int): bool
}

' Controller Classes (Handle requests and use repositories)
class LanguageController {
    - repo: LanguageRepository

    + __construct(repo: LanguageRepository)
    + index(): void
    + show(id: int): void
    + store(): void
    + update(id: int): void
    + destroy(id: int): void
}

class TopicController {
    - repo: TopicRepository

    + __construct(repo: TopicRepository)
    + index(): void
    + show(id: int): void
    + store(): void
    + update(id: int): void
    + destroy(id: int): void
}

class LessonController {
    - repo: LessonRepository

    + __construct(repo: LessonRepository)
    + index(): void
    + show(id: int): void
    + store(): void
    + update(id: int): void
    + destroy(id: int): void
    + getProgress(lesson_id: int, user_id: int): void
    + updateProgress(lesson_id: int, user_id: int): void
}

class DictionaryController {
    - repo: DictionaryRepository

    + __construct(repo: DictionaryRepository)
    + index(): void
    + show(id: int): void
    + store(): void
    + update(id: int): void
    + destroy(id: int): void
    + search(keyword: string): void
}

' Seeder Classes (Populate database from JSON files)
class DictionarySeeder {
    - repo: DictionaryRepository

    + __construct(repo: DictionaryRepository)
    + run(): void
}

class LessonSeeder {
    - repo: LessonRepository
    - topicRepo: TopicRepository

    + __construct(repo: LessonRepository, topicRepo: TopicRepository)
    + run(): void
}

' Relationships
' Aggregation (weak "has-a"): Entities can exist independently
Language o-- "*" Topic : aggregation
Topic o-- "*" Lesson : aggregation
Language o-- "*" Dictionary : aggregation

' Dependency (uses): Repositories manage entities
LanguageRepository ..> Language : dependency
TopicRepository ..> Topic : dependency
LessonRepository ..> Lesson : dependency
DictionaryRepository ..> Dictionary : dependency

' Dependency: Controllers use repositories
LanguageController ..> LanguageRepository : dependency
TopicController ..> TopicRepository : dependency
LessonController ..> LessonRepository : dependency
DictionaryController ..> DictionaryRepository : dependency

' Dependency: Seeders use repositories and entities
DictionarySeeder ..> DictionaryRepository : dependency
DictionarySeeder ..> Dictionary : dependency
LessonSeeder ..> LessonRepository : dependency
LessonSeeder ..> TopicRepository : dependency
LessonSeeder ..> Lesson : dependency
LessonSeeder ..> Topic : dependency
